fixed z-index issue with comps so line is clickable

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App{
+  z-index: 0;
   position: relative;
 
   width: 100vw;
