--- a/src/components/Timeline/Line/Line.css
+++ b/src/components/Timeline/Line/Line.css
@@ -26,7 +26,7 @@
 .year::after{
     position: absolute;
     bottom: -1.7em;
-    left: 45%;
+    left: 41%;
 
     height: 2em;
     width: 0.7em;
