--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -46,7 +46,7 @@
 }
 
 .Card{
-    z-index: 1;
+    z-index: 0;
 
     width: 63%;
     height: 100%;
